--- a/scss/03_Parts/more.scss
+++ b/scss/03_Parts/more.scss
@@ -69,5 +69,13 @@
             border-color : transparent $COLOR_Watch_text;
         }
     }
+    /* //_{@modern */
+        @media (-ms-high-contrast:active) {
+            & i {
+                border-top-color    : transparent !important;
+                border-bottom-color : transparent !important;
+            }
+        }
+    /* //_}@modern */
 }
 /** //_}+blog **/
