--- a/scss/06_ArticleFooter/Pager.scss
+++ b/scss/06_ArticleFooter/Pager.scss
@@ -88,6 +88,11 @@
                     /* //_{^#can-transparent */
                     border-color : $COLOR_Default_fill $COLOR_Default_casual_text;
                     /* //_}^#can-transparent */
+                    /* //_{@modern */
+                        @media (-ms-high-contrast:active) {
+                            border-color : transparent #fff;
+                        }
+                    /* //_}@modern */
                 }
                 .Pager a:active i
                 /* //_{#can-focus-psedo-class */
@@ -114,6 +119,11 @@
                     /* //_{^#can-transparent */
                     border-color : $COLOR_Default_casual_text $COLOR_Default_fill;
                     /* //_}^#can-transparent */
+                    /* //_{@modern */
+                        @media (-ms-high-contrast:active) {
+                            border-color : #fff transparent;
+                        }
+                    /* //_}@modern */
                 }
                 .Pager-top a:active i
                 /* //_{#can-focus-psedo-class */
